package com.company;

public class Eagle extends FlyingBird
{
    public void fly()
    {
        System.out.println("Eagle is flying very high.");
    }
}
