package com.company;

public class Falcon extends FlyingBird
{
    public void fly()
    {
        System.out.println("Falcon is flying high.");
    }
}
