package com.company;

public interface IBird
{
    void fly();
    void walk();
}
