package com.company;

public class Penguin extends NonFlyingBird
{
    public void walk()
    {
        System.out.println("Penguin walks funny.");
    }
}
