package com.company;

public class Pigeon extends FlyingBird
{
    public void fly()
    {
        System.out.println("Pigeon is flying not very high.");
    }
}
