@startuml

title __LSP EXAMPLE's Class Diagram__\n

  namespace com.company {
    class com.company.Eagle {
    }
  }
  

  namespace com.company {
    class com.company.Falcon {
    }
  }
  

  namespace com.company {
    abstract class com.company.FlyingBird {
    }
  }
  

  namespace com.company {
    class com.company.GameUser {
    }
  }
  

  namespace com.company {
    interface com.company.IBird {
    }
  }
  

  namespace com.company {
    class com.company.Main {
    }
  }
  

  namespace com.company {
    abstract class com.company.NonFlyingBird {
    }
  }
  

  namespace com.company {
    class com.company.Owl {
    }
  }
  

  namespace com.company {
    class com.company.Penguin {
    }
  }
  

  namespace com.company {
    class com.company.Pigeon {
    }
  }
  

  com.company.Eagle -up-|> com.company.FlyingBird
  com.company.Falcon -up-|> com.company.FlyingBird
  com.company.FlyingBird .up.|> com.company.IBird
  com.company.GameUser o-- com.company.IBird : character
  com.company.NonFlyingBird .up.|> com.company.IBird
  com.company.Owl -up-|> com.company.FlyingBird
  com.company.Penguin -up-|> com.company.NonFlyingBird
  com.company.Pigeon -up-|> com.company.FlyingBird


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
